Bug 869188 - Avoid mixing CheckedInt and float in Blur code - r=Bas