gfx/2d/Blur.cpp
@@ -401,9 +401,12 @@ AlphaBoxBlur::AlphaBoxBlur(const Rect& aRect,
     mStride(aStride),
     mSurfaceAllocationSize(-1)
 {
-  CheckedInt<int32_t> minDataSize = CheckedInt<int32_t>(aRect.width)*aRect.height;
-  if (minDataSize.isValid()) {
-    mSurfaceAllocationSize = minDataSize.value();
+  IntRect intRect;
+  if (aRect.ToIntRect(&intRect)) {
+    CheckedInt<int32_t> minDataSize = CheckedInt<int32_t>(intRect.width)*intRect.height;
+    if (minDataSize.isValid()) {
+      mSurfaceAllocationSize = minDataSize.value();
+    }
   }
 }
 
